fix: version mobile para el perfil de usuario

--- a/frontend/src/styles/components/profileModal.scss
+++ b/frontend/src/styles/components/profileModal.scss
@@ -13,6 +13,7 @@
   align-items: center;
   z-index: 2000;
   transition: background 0.3s ease;
+  overflow: auto;
 }
 
 .modal-content.profile-modal {
@@ -25,6 +26,7 @@
   display: flex;
   flex-direction: column;
   text-align: left;
+  
   .error{
     color: red;
     margin-bottom: 1rem;
